# blag

./: .editorconfig  .gitignore  Makefile  README.md  __init__.py  __main__.py  config.py  node_modules  package.json  passwd.sh  pyproject.toml  requirements.txt
blag/: __init__.py  __main__.py  models.py  rest.py  util.py
blag/static/: base.css
blag/templates/: base.html  index.html  new.html
frontend/: .eslintrc.js  README.md  index.html  package.json
frontend/config/: index.js
frontend/src/: App.vue
frontend/src/components/: Home.vue
lib/blag/: __init__.py  rest.py  util.py
static/: index.html
static/css/: main.css
static/js/: app.js
