[tool.poetry]
name = "blag"
version = "0.1.0"
description = "A blog"
authors = ["Ryan Heywood (RyanSquared) <ryan@hashbang.sh>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.0"
approute = {git = "https://github.com/RyanSquared/approute"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
