[tool.poetry]
name = "blag"
version = "0.1.0"
description = "A blog"
authors = ["Ryan Heywood (RyanSquared) <ryan@hashbang.sh>"]
license = "MIT"

include = ["static/node_modules/**/*"]

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.0"
approute = {git = "https://github.com/RyanSquared/approute"}
arrow = "^0.12.1"
sqlalchemy = "^1.2"
flask_sqlalchemy = "^2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
